--- a/MVCOnlineTicariOtomasyon/MVCOnlineTicariOtomasyon.csproj
+++ b/MVCOnlineTicariOtomasyon/MVCOnlineTicariOtomasyon.csproj
@@ -121,6 +121,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Entities\Admin.cs" />
     <Compile Include="Models\DataAccess\Context.cs" />
     <Compile Include="Models\Entities\Bill.cs" />
