--- a/MVCOnlineTicariOtomasyon/MVCOnlineTicariOtomasyon.csproj
+++ b/MVCOnlineTicariOtomasyon/MVCOnlineTicariOtomasyon.csproj
@@ -204,6 +204,7 @@
     <Content Include="Views\Shared\AdminLayout.cshtml" />
     <Content Include="Views\Category\Index.cshtml" />
     <Content Include="Views\Category\AddCategory.cshtml" />
+    <Content Include="Views\Category\GetCategory.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
